--- a/mask_torch_eval.ipynb
+++ b/mask_torch_eval.ipynb
@@ -19,7 +19,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "\n",
+      "NVIDIA GeForce RTX 3060\n",
+      "Memory Usage:\n",
+      "Allocated: 0.2 GB\n",
+      "Cached:    0.2 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# setting device on GPU if available, else CPU\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print('Using device:', device)\n",
+    "print()\n",
+    "\n",
+    "#Additional Info when using cuda\n",
+    "if device.type == 'cuda':\n",
+    "    print(torch.cuda.get_device_name(0))\n",
+    "    print('Memory Usage:')\n",
+    "    print('Allocated:', round(torch.cuda.memory_allocated(0)/1024**3,1), 'GB')\n",
+    "    print('Cached:   ', round(torch.cuda.memory_reserved(0)/1024**3,1), 'GB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +291,7 @@
        ")"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,14 +489,52 @@
     "                cnts = cv2.findContours(close.copy(), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "                cnts = imutils.grab_contours(cnts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [{\"id\":1,\"width\":640,\"height\":360,\"file_name\":\"1,4300__2022-02-08 16_06_02.837_marel.png\"},{\"id\":2,\"width\":640,\"height\":360,\"file_name\":\"1,6100__2022-02-08 14_46_38.178_marel.png\"},{\"id\":3,\"width\":640,\"height\":360,\"file_name\":\"1,6600__2022-02-08 13_10_56.749_marel.png\"},{\"id\":4,\"width\":640,\"height\":360,\"file_name\":\"1,7300__2022-02-08 14_59_04.906_marel.png\"},{\"id\":5,\"width\":640,\"height\":360,\"file_name\":\"1,7400__2022-02-08 16_06_07.994_marel.png\"},{\"id\":6,\"width\":640,\"height\":360,\"file_name\":\"1,7800__2022-02-08 14_10_17.560_marel.png\"},{\"id\":7,\"width\":640,\"height\":360,\"file_name\":\"1,7900__2022-02-08 12_27_07.947_marel.png\"},{\"id\":8,\"width\":640,\"height\":360,\"file_name\":\"1,8100__2022-02-08 15_48_53.963_marel.png\"},{\"id\":9,\"width\":640,\"height\":360,\"file_name\":\"1,8600__2022-02-08 13_54_10.942_marel.png\"},{\"id\":10,\"width\":640,\"height\":360,\"file_name\":\"1,8800__2022-02-08 12_10_33.107_marel.png\"},{\"id\":11,\"width\":640,\"height\":360,\"file_name\":\"1,9000__2022-02-08 12_42_50.031_marel.png\"},{\"id\":12,\"width\":640,\"height\":360,\"file_name\":\"1,9000__2022-02-08 14_54_19.143_marel.png\"},{\"id\":13,\"width\":640,\"height\":360,\"file_name\":\"1,9800__2022-02-08 13_08_53.051_marel.png\"},{\"id\":14,\"width\":640,\"height\":360,\"file_name\":\"1,9800__2022-02-08 14_07_39.529_marel.png\"},{\"id\":15,\"width\":640,\"height\":360,\"file_name\":\"1,9900__2022-02-08 15_10_59.882_marel.png\"},{\"id\":16,\"width\":640,\"height\":360,\"file_name\":\"2,0000__2022-02-08 12_13_41.027_marel.png\"},{\"id\":17,\"width\":640,\"height\":360,\"file_name\":\"2,0400__2022-02-08 11_00_22.329_marel.png\"},{\"id\":18,\"width\":640,\"height\":360,\"file_name\":\"2,0500__2022-02-08 15_02_38.111_marel.png\"},{\"id\":19,\"width\":640,\"height\":360,\"file_name\":\"2,0600__2022-02-08 12_16_59.030_marel.png\"},{\"id\":20,\"width\":640,\"height\":360,\"file_name\":\"2,1200__2022-02-08 15_14_44.937_marel.png\"},{\"id\":21,\"width\":640,\"height\":360,\"file_name\":\"2,1300__2022-02-08 10_30_23.717_marel.png\"},{\"id\":22,\"width\":640,\"height\":360,\"file_name\":\"2,1300__2022-02-08 12_17_06.651_marel.png\"},{\"id\":23,\"width\":640,\"height\":360,\"file_name\":\"2,1300__2022-02-08 14_39_11.088_marel.png\"},{\"id\":24,\"width\":640,\"height\":360,\"file_name\":\"2,1300__2022-02-08 14_44_12.802_marel.png\"},{\"id\":25,\"width\":640,\"height\":360,\"file_name\":\"2,1600__2022-02-08 13_11_53.708_marel.png\"},{\"id\":26,\"width\":640,\"height\":360,\"file_name\":\"2,1700__2022-02-08 10_26_00.701_marel.png\"},{\"id\":27,\"width\":640,\"height\":360,\"file_name\":\"2,1700__2022-02-08 16_00_57.967_marel.png\"},{\"id\":28,\"width\":640,\"height\":360,\"file_name\":\"2,2200__2022-02-08 13_05_01.074_marel.png\"},{\"id\":29,\"width\":640,\"height\":360,\"file_name\":\"2,2200__2022-02-08 16_27_54.219_marel.png\"},{\"id\":30,\"width\":640,\"height\":360,\"file_name\":\"2,2300__2022-02-08 10_56_04.581_marel.png\"},{\"id\":31,\"width\":640,\"height\":360,\"file_name\":\"2,2300__2022-02-08 12_45_10.034_marel.png\"},{\"id\":32,\"width\":640,\"height\":360,\"file_name\":\"2,2300__2022-02-08 13_05_53.448_marel.png\"},{\"id\":33,\"width\":640,\"height\":360,\"file_name\":\"2,2300__2022-02-08 14_48_07.283_marel.png\"},{\"id\":34,\"width\":640,\"height\":360,\"file_name\":\"2,2400__2022-02-08 12_53_52.658_marel.png\"},{\"id\":35,\"width\":640,\"height\":360,\"file_name\":\"2,2400__2022-02-08 13_04_40.366_marel.png\"},{\"id\":36,\"width\":640,\"height\":360,\"file_name\":\"2,2800__2022-02-08 15_51_56.676_marel.png\"},{\"id\":37,\"width\":640,\"height\":360,\"file_name\":\"2,3000__2022-02-08 12_23_49.001_marel.png\"},{\"id\":38,\"width\":640,\"height\":360,\"file_name\":\"2,3000__2022-02-08 13_00_22.586_marel.png\"},{\"id\":39,\"width\":640,\"height\":360,\"file_name\":\"2,3100__2022-02-08 12_15_28.827_marel.png\"},{\"id\":40,\"width\":640,\"height\":360,\"file_name\":\"2,3100__2022-02-08 15_35_22.662_marel.png\"},{\"id\":41,\"width\":640,\"height\":360,\"file_name\":\"2,3200__2022-02-08 16_04_42.090_marel.png\"},{\"id\":42,\"width\":640,\"height\":360,\"file_name\":\"2,3300__2022-02-08 14_37_29.016_marel.png\"},{\"id\":43,\"width\":640,\"height\":360,\"file_name\":\"2,3300__2022-02-08 15_29_25.841_marel.png\"},{\"id\":44,\"width\":640,\"height\":360,\"file_name\":\"2,3400__2022-02-08 10_40_27.977_marel.png\"},{\"id\":45,\"width\":640,\"height\":360,\"file_name\":\"2,3500__2022-02-08 14_47_30.182_marel.png\"},{\"id\":46,\"width\":640,\"height\":360,\"file_name\":\"2,3500__2022-02-08 15_17_46.764_marel.png\"},{\"id\":47,\"width\":640,\"height\":360,\"file_name\":\"2,3500__2022-02-08 15_38_32.266_marel.png\"},{\"id\":48,\"width\":640,\"height\":360,\"file_name\":\"2,3600__2022-02-08 14_46_37.354_marel.png\"},{\"id\":49,\"width\":640,\"height\":360,\"file_name\":\"2,3700__2022-02-08 12_09_58.930_marel.png\"},{\"id\":50,\"width\":640,\"height\":360,\"file_name\":\"2,3700__2022-02-08 15_10_13.322_marel.png\"},{\"id\":51,\"width\":640,\"height\":360,\"file_name\":\"2,3800__2022-02-08 12_14_08.007_marel.png\"},{\"id\":52,\"width\":640,\"height\":360,\"file_name\":\"2,3800__2022-02-08 14_38_33.034_marel.png\"},{\"id\":53,\"width\":640,\"height\":360,\"file_name\":\"2,3900__2022-02-08 12_09_12.118_marel.png\"},{\"id\":54,\"width\":640,\"height\":360,\"file_name\":\"2,4000__2022-02-08 14_27_04.693_marel.png\"},{\"id\":55,\"width\":640,\"height\":360,\"file_name\":\"2,4000__2022-02-08 15_59_18.052_marel.png\"},{\"id\":56,\"width\":640,\"height\":360,\"file_name\":\"2,4200__2022-02-08 13_34_46.631_marel.png\"},{\"id\":57,\"width\":640,\"height\":360,\"file_name\":\"2,4300__2022-02-08 09_05_07.613_marel.png\"},{\"id\":58,\"width\":640,\"height\":360,\"file_name\":\"2,4300__2022-02-08 10_46_17.793_marel.png\"},{\"id\":59,\"width\":640,\"height\":360,\"file_name\":\"2,4300__2022-02-08 14_23_41.393_marel.png\"},{\"id\":60,\"width\":640,\"height\":360,\"file_name\":\"2,4300__2022-02-08 16_02_49.939_marel.png\"},{\"id\":61,\"width\":640,\"height\":360,\"file_name\":\"2,4400__2022-02-08 13_57_37.685_marel.png\"},{\"id\":62,\"width\":640,\"height\":360,\"file_name\":\"2,4400__2022-02-08 14_39_10.058_marel.png\"},{\"id\":63,\"width\":640,\"height\":360,\"file_name\":\"2,4400__2022-02-08 15_43_07.998_marel.png\"},{\"id\":64,\"width\":640,\"height\":360,\"file_name\":\"2,4500__2022-02-08 12_51_31.962_marel.png\"},{\"id\":65,\"width\":640,\"height\":360,\"file_name\":\"2,4600__2022-02-08 12_26_53.092_marel.png\"},{\"id\":66,\"width\":640,\"height\":360,\"file_name\":\"2,4700__2022-02-08 15_07_43.786_marel.png\"},{\"id\":67,\"width\":640,\"height\":360,\"file_name\":\"2,4800__2022-02-08 13_40_23.941_marel.png\"},{\"id\":68,\"width\":640,\"height\":360,\"file_name\":\"2,4900__2022-02-08 15_08_06.854_marel.png\"},{\"id\":69,\"width\":640,\"height\":360,\"file_name\":\"2,4900__2022-02-08 16_11_35.182_marel.png\"},{\"id\":70,\"width\":640,\"height\":360,\"file_name\":\"2,5000__2022-02-08 10_55_55.044_marel.png\"},{\"id\":71,\"width\":640,\"height\":360,\"file_name\":\"2,5100__2022-02-08 10_42_08.769_marel.png\"},{\"id\":72,\"width\":640,\"height\":360,\"file_name\":\"2,5100__2022-02-08 14_59_58.037_marel.png\"},{\"id\":73,\"width\":640,\"height\":360,\"file_name\":\"2,5300__2022-02-08 11_04_41.130_marel.png\"},{\"id\":74,\"width\":640,\"height\":360,\"file_name\":\"2,5300__2022-02-08 14_44_32.897_marel.png\"},{\"id\":75,\"width\":640,\"height\":360,\"file_name\":\"2,5600__2022-02-08 13_13_23.103_marel.png\"},{\"id\":76,\"width\":640,\"height\":360,\"file_name\":\"2,5600__2022-02-08 15_22_45.009_marel.png\"},{\"id\":77,\"width\":640,\"height\":360,\"file_name\":\"2,5700__2022-02-08 12_06_13.744_marel.png\"},{\"id\":78,\"width\":640,\"height\":360,\"file_name\":\"2,5700__2022-02-08 15_38_08.846_marel.png\"},{\"id\":79,\"width\":640,\"height\":360,\"file_name\":\"2,5800__2022-02-08 10_56_15.978_marel.png\"},{\"id\":80,\"width\":640,\"height\":360,\"file_name\":\"2,5800__2022-02-08 14_55_32.068_marel.png\"},{\"id\":81,\"width\":640,\"height\":360,\"file_name\":\"2,5900__2022-02-08 14_26_44.024_marel.png\"},{\"id\":82,\"width\":640,\"height\":360,\"file_name\":\"2,6000__2022-02-08 10_40_52.273_marel.png\"},{\"id\":83,\"width\":640,\"height\":360,\"file_name\":\"2,6000__2022-02-08 14_47_32.241_marel.png\"},{\"id\":84,\"width\":640,\"height\":360,\"file_name\":\"2,6000__2022-02-08 14_59_45.683_marel.png\"},{\"id\":85,\"width\":640,\"height\":360,\"file_name\":\"2,6000__2022-02-08 15_52_47.005_marel.png\"},{\"id\":86,\"width\":640,\"height\":360,\"file_name\":\"2,6100__2022-02-08 13_33_37.009_marel.png\"},{\"id\":87,\"width\":640,\"height\":360,\"file_name\":\"2,6100__2022-02-08 16_07_25.412_marel.png\"},{\"id\":88,\"width\":640,\"height\":360,\"file_name\":\"2,6200__2022-02-08 14_31_13.273_marel.png\"},{\"id\":89,\"width\":640,\"height\":360,\"file_name\":\"2,6200__2022-02-08 16_08_46.016_marel.png\"},{\"id\":90,\"width\":640,\"height\":360,\"file_name\":\"2,6300__2022-02-08 10_53_55.079_marel.png\"},{\"id\":91,\"width\":640,\"height\":360,\"file_name\":\"2,6300__2022-02-08 14_49_05.799_marel.png\"},{\"id\":92,\"width\":640,\"height\":360,\"file_name\":\"2,6400__2022-02-08 12_13_28.055_marel.png\"},{\"id\":93,\"width\":640,\"height\":360,\"file_name\":\"2,6400__2022-02-08 15_53_24.297_marel.png\"},{\"id\":94,\"width\":640,\"height\":360,\"file_name\":\"2,6400__2022-02-08 16_06_54.711_marel.png\"},{\"id\":95,\"width\":640,\"height\":360,\"file_name\":\"2,6500__2022-02-08 11_04_19.097_marel.png\"},{\"id\":96,\"width\":640,\"height\":360,\"file_name\":\"2,6500__2022-02-08 15_46_40.968_marel.png\"},{\"id\":97,\"width\":640,\"height\":360,\"file_name\":\"2,6600__2022-02-08 10_43_46.347_marel.png\"},{\"id\":98,\"width\":640,\"height\":360,\"file_name\":\"2,6600__2022-02-08 15_37_36.722_marel.png\"},{\"id\":99,\"width\":640,\"height\":360,\"file_name\":\"2,6700__2022-02-08 12_19_08.011_marel.png\"},{\"id\":100,\"width\":640,\"height\":360,\"file_name\":\"2,6700__2022-02-08 14_30_27.123_marel.png\"},{\"id\":101,\"width\":640,\"height\":360,\"file_name\":\"2,6800__2022-02-08 10_53_40.042_marel.png\"},{\"id\":102,\"width\":640,\"height\":360,\"file_name\":\"2,6800__2022-02-08 13_47_56.988_marel.png\"},{\"id\":103,\"width\":640,\"height\":360,\"file_name\":\"2,6800__2022-02-08 16_32_09.683_marel.png\"},{\"id\":104,\"width\":640,\"height\":360,\"file_name\":\"2,6900__2022-02-08 10_48_59.843_marel.png\"},{\"id\":105,\"width\":640,\"height\":360,\"file_name\":\"2,6900__2022-02-08 13_35_45.198_marel.png\"},{\"id\":106,\"width\":640,\"height\":360,\"file_name\":\"2,6900__2022-02-08 13_37_20.919_marel.png\"},{\"id\":107,\"width\":640,\"height\":360,\"file_name\":\"2,6900__2022-02-08 14_25_53.585_marel.png\"},{\"id\":108,\"width\":640,\"height\":360,\"file_name\":\"2,6900__2022-02-08 14_58_27.196_marel.png\"},{\"id\":109,\"width\":640,\"height\":360,\"file_name\":\"2,7000__2022-02-08 14_07_50.921_marel.png\"},{\"id\":110,\"width\":640,\"height\":360,\"file_name\":\"2,7000__2022-02-08 14_52_49.741_marel.png\"},{\"id\":111,\"width\":640,\"height\":360,\"file_name\":\"2,7000__2022-02-08 15_14_21.249_marel.png\"},{\"id\":112,\"width\":640,\"height\":360,\"file_name\":\"2,7000__2022-02-08 15_26_17.839_marel.png\"},{\"id\":113,\"width\":640,\"height\":360,\"file_name\":\"2,7000__2022-02-08 15_33_26.156_marel.png\"},{\"id\":114,\"width\":640,\"height\":360,\"file_name\":\"2,7100__2022-02-08 10_44_07.147_marel.png\"},{\"id\":115,\"width\":640,\"height\":360,\"file_name\":\"2,7100__2022-02-08 13_50_41.242_marel.png\"},{\"id\":116,\"width\":640,\"height\":360,\"file_name\":\"2,7100__2022-02-08 14_35_51.194_marel.png\"},{\"id\":117,\"width\":640,\"height\":360,\"file_name\":\"2,7200__2022-02-08 12_48_36.096_marel.png\"},{\"id\":118,\"width\":640,\"height\":360,\"file_name\":\"2,7300__2022-02-08 13_37_26.722_marel.png\"},{\"id\":119,\"width\":640,\"height\":360,\"file_name\":\"2,7300__2022-02-08 14_38_10.663_marel.png\"},{\"id\":120,\"width\":640,\"height\":360,\"file_name\":\"2,7300__2022-02-08 16_01_33.913_marel.png\"},{\"id\":121,\"width\":640,\"height\":360,\"file_name\":\"2,7400__2022-02-08 09_24_47.104_marel.png\"},{\"id\":122,\"width\":640,\"height\":360,\"file_name\":\"2,7400__2022-02-08 12_28_12.947_marel.png\"}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = []\n",
+    "for i in data:\n",
+    "    # print(i['file_name'])\n",
+    "    image.append(i['file_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in image:\n",
+    "    im = Image.open('my_data/train/'+i)\n",
+    "    im.save('new_data/'+i)"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a955710b5c7798e64dc071dc4e14502d70b68ce0e57d61b2c8026a6d1e816ae0"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('win_38_torch': venv)",
+   "display_name": "Python 3.8.10 ('torch-test')",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +550,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "820b1db720ae6cdd0cf8900198adc30e331443deb52ef964a16afedd21e896a1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
